# ai-workflow

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
app/: cli.py  main.py  serve.py
app/src/api/: __init__.py  charts.py  health.py
app/src/config/: llm_client.py  settings.py
app/src/models/: __init__.py  chart_schemas.py
app/src/services/: ai_config_generator.py  chart_renderer.py  datasource_loader.py
app/src/utils/: json_utils.py
examples/: config_bar.json  config_line.json  sales.csv  weather.json
tests/: test_ai.py
