[project]
name = "lite-chart-studio"
version = "0.4.0"
description = "Lightweight standalone charting tool: datasource -> config -> Plotly. BYO LLM optional."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pandas>=2.2.1",
    "plotly>=5.20.0",
    "pydantic>=2.6.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1"]
png = ["kaleido>=0.2.1"]

[project.scripts]
lite-chart-studio = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests]
python_files = "test_*.py"
addopts = "-v"